--- a/TileSetSplitter/TileSetSplitter/MainWindow.xaml
+++ b/TileSetSplitter/TileSetSplitter/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TileSetSplitter"
         mc:Ignorable="d"
+        WindowState="Normal"
         Title="Tile Set Splitter" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
